backend/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: journeyjinni-backend
  namespace: journeyjinni
spec:
  selector:
    matchLabels:
      app: journeyjinni-backend
  template:
    metadata:
      labels:
        app: journeyjinni-backend
    spec:
      containers:
      - name: journeyjinni-backend
        image: placeholder-image  # 기본적으로 이미지가 필요하지만, 실제 이미지는 오버레이에서 패치
