backend/base/service.yaml
apiVersion: v1 # API 버전
kind: Service
metadata: # 서비스이름, 네임스페이스, 리소스 식벽을 위한 라벨 설정
  name: journeyjinni-backend
  namespace: journeyjinni
