backend/base/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: journeyjinni-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules: []
